Tensorboard on aip removed, downloading tb logs added

--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -101,12 +101,6 @@ implementation:
               scaler,
               os.path.join('gcs', 'models_forecasting', f'{feature}.joblib'),
           )
-          # _ = aip.Model.upload(
-          #     display_name=f'{feature}_scaler_model',
-          #     artifact_uri=os.path.join('gcs', 'models_forecasting'),
-          #     serving_container_image_uri=TRAIN_IMAGE,
-          #     location=REGION,
-          # )
           x_train, y_train = [], []
           for i in range(lookback, len(scaled_train)):
               x_train.append(scaled_train[i - lookback:i])
@@ -123,22 +117,13 @@ implementation:
               loss=keras.losses.mean_squared_error,
               metrics=keras.metrics.RootMeanSquaredError(),
               optimizer=keras.optimizers.RMSprop(learning_rate=learning_rate))
-          tensorboard = aip.Tensorboard.create(
-              project=PROJECT_ID,
-              display_name=feature,
-              location=REGION,
-          )
           aip.init(
               experiment=feature.lower().replace('_', '-'),
-              experiment_tensorboard=tensorboard,
               project=PROJECT_ID,
               location=REGION,
               staging_bucket=PIPELINES_BUCKET_URI,
           )
-          aip.start_run(
-              run=feature,
-              tensorboard=tensorboard,
-          )
+          aip.start_run(run=feature.lower().replace('_', '-'), )
           history = forecaster.fit(x_train,
                                    y_train,
                                    shuffle=False,
@@ -175,23 +160,12 @@ implementation:
               for k, v in history.history.items():
                   history.history[k] = [float(vi) for vi in v]
                   metrics.log_metric(k, history.history[k])
-                  # if len(v) == 1:
-                  #     aip.log_metrics({k: v})
-                  # else:
-                  #     aip.log_time_series_metrics(metrics={k: v})
               metrics.log_metric('feature', feature)
               metrics_file.write(json.dumps(history.history))
           keras_model.metadata['feature'] = feature
           forecaster.save(keras_model.path + f'_{feature}.h5')
           forecaster.save(os.path.join('gcs', 'models_forecasting', f'{feature}.h5'))
-          # _ = aip.Model.upload(
-          #     display_name=f'{feature}_keras_model',
-          #     artifact_uri=os.path.join('gcs', 'models_forecasting'),
-          #     serving_container_image_uri=TRAIN_IMAGE,
-          #     location=REGION,
-          # )
           aip.end_run()
-          aip.ExperimentRun.delete(run_name=feature)
 
     args:
     - --executor_input
