Uploading models to the Model Registry added

--- a/configs/evaluate.yaml
+++ b/configs/evaluate.yaml
@@ -79,6 +79,8 @@ implementation:
                                         verbose=1,
                                         batch_size=batch_size,
                                         return_dict=True)
+          with open(metrics.path + f'_{feature}.json', 'w') as metrics_file:
+              metrics_file.write(json.dumps(results))
           for k, v in results.items():
               metrics.log_metric(k, v)
           metrics.metadata['feature'] = feature
