--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -165,6 +165,7 @@ implementation:
                                                'test_rig_pipelines',
                                                'tb',
                                                f'{feature}',
+                                               TIMESTAMP,
                                            ),
                                            histogram_freq=1,
                                            write_graph=True,
