--- a/configs/build_features.yaml
+++ b/configs/build_features.yaml
@@ -3,7 +3,6 @@ description: Read the interim data, build features (float down casting, removes 
   and the step zero data, calculates and adds to the processed data the power and
   time features), saves the processed data.
 inputs:
-- {name: data_bucket_name, type: String, description: GCS data bucket}
 - {name: raw_features, type: Artifact, description: Raw features json artifact}
 - {name: interim_data, type: Dataset, description: Interim dataset}
 outputs:
@@ -35,7 +34,6 @@ implementation:
       from typing import *
 
       def build_features(
-          data_bucket_name: str,
           raw_features: Input[Artifact],
           interim_data: Input[Dataset],
           processed_data: Output[Dataset],
@@ -44,7 +42,6 @@ implementation:
           Read the interim data, build features (float down casting, removes NaNs and the step zero data, calculates and adds to the processed data the power and time features), saves the processed data.
 
           Args:
-              data_bucket_name (str): GCS data bucket
               raw_features (Input[Artifact]): Raw features json artifact
               interim_data (Input[Dataset]): Interim dataset
               processed_data (Output[Dataset]): Processed dataset
@@ -97,7 +94,7 @@ implementation:
           df.columns = df.columns.str.lstrip()
           df.columns = df.columns.str.replace(' ', '_')
           df.to_csv(
-              os.path.join('gcs', data_bucket_name, 'processed',
+              os.path.join('gcs', 'test_rig_data', 'processed',
                            'processed_data.csv'),
               index=False,
           )
