Experiments moved to evaluate, model registry added

--- a/configs/evaluate.yaml
+++ b/configs/evaluate.yaml
@@ -22,7 +22,7 @@ implementation:
           python3 -m ensurepip || python3 -m ensurepip --user || apt-get install python3-pip
       fi
 
-      PIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet     --no-warn-script-location 'pandas' 'scikit-learn' 'google-cloud-aiplatform' 'kfp==1.8.14' && "$0" "$@"
+      PIP_DISABLE_PIP_VERSION_CHECK=1 python3 -m pip install --quiet     --no-warn-script-location 'pandas' 'scikit-learn' 'google-cloud-aiplatform' 'protobuf==3.13.0' 'kfp==1.8.14' && "$0" "$@"
     - sh
     - -ec
     - |
@@ -57,12 +57,25 @@ implementation:
               eval_metrics (Output[Metrics]): Metrics
           """
           import json
+          from datetime import datetime
 
+          import google.cloud.aiplatform as aip
           import joblib
           import numpy as np
           import pandas as pd
           from tensorflow import keras
 
+          PROJECT_ID = 'test-rig-349313'
+          REGION = 'europe-west2'
+          EXP_NAME = feature.lower().replace('_', '-')
+          TIMESTAMP = datetime.now().strftime('%Y%m%d%H%M%S')
+
+          aip.init(
+              experiment=EXP_NAME,
+              project=PROJECT_ID,
+              location=REGION,
+          )
+          aip.start_run(run='-'.join((EXP_NAME, TIMESTAMP)))
           test_df = pd.read_csv(test_data.path + '.csv', index_col=False)
           test_data = test_df[feature].values.reshape(-1, 1)
           scaler = joblib.load(scaler_model.path + f'_{feature}.joblib')
@@ -73,7 +86,7 @@ implementation:
               y_test.append(scaled_test[i])
           x_test = np.stack(x_test)
           y_test = np.stack(y_test)
-          forecaster = keras.models.load_model(keras_model.path + f'_{feature}.h5')
+          forecaster = keras.models.load_model(keras_model.path + f'_{feature}')
           results = forecaster.evaluate(x_test,
                                         y_test,
                                         verbose=1,
@@ -84,6 +97,7 @@ implementation:
           for k, v in results.items():
               metrics.log_metric(k, v)
           metrics.metadata['feature'] = feature
+          aip.end_run()
 
     args:
     - --executor_input
