--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -18,7 +18,7 @@ outputs:
 - {name: metrics, type: Metrics, description: Metrics}
 implementation:
   container:
-    image: tensorflow/tensorflow:latest
+    image: tensorflow/tensorflow:latest-gpu
     command:
     - sh
     - -c
@@ -80,15 +80,6 @@ implementation:
           from sklearn.preprocessing import MinMaxScaler
           from tensorflow import keras
 
-          PROJECT_ID = 'test-rig-349313'
-          REGION = 'europe-west2'
-
-          SERVING_IMAGE_GPU_PREFIX = 'tf2-gpu.2-9'
-          SERVING_IMAGE_CPU_PREFIX = 'tf2-cpu.2-9'
-          SERVING_IMAGE = f'{REGION.split("-")[0]}-docker.pkg.dev/vertex-ai/prediction/{SERVING_IMAGE_CPU_PREFIX}:latest'
-
-          MODELS_BUCKET_NAME = 'models_forecasting'
-          MODELS_BUCKET_URI = f'gs://{MODELS_BUCKET_NAME}'
           TIMESTAMP = datetime.now().strftime('%Y%m%d%H%M%S')
 
           train_df = pd.read_csv(train_data.path + '.csv', index_col=False)
@@ -98,7 +89,11 @@ implementation:
           scaler_model.metadata['feature'] = feature
           joblib.dump(
               scaler,
-              scaler_model.path + f'_{feature}.joblib',
+              scaler_model.path + '.joblib',
+          )
+          joblib.dump(
+              scaler,
+              os.path.join('gcs', 'models_forecasting', f'{feature}.joblib'),
           )
           x_train, y_train = [], []
           for i in range(lookback, len(scaled_train_data)):
@@ -106,7 +101,7 @@ implementation:
               y_train.append(scaled_train_data[i])
           x_train = np.stack(x_train)
           y_train = np.stack(y_train)
-          forecaster = keras.models.Sequential()
+          forecaster = keras.models.Sequential(name=f'{feature}_forecaster')
           forecaster.add(
               keras.layers.LSTM(lstm_units,
                                 input_shape=(x_train.shape[1], x_train.shape[2]),
@@ -157,53 +152,43 @@ implementation:
               metrics.log_metric(k, history.history[k])
           metrics.metadata['feature'] = feature
           keras_model.metadata['feature'] = feature
-          forecaster.save(keras_model.path + f'_{feature}')
-          forecaster.save(os.path.join('gcs', 'models_forecasting', feature))
-          aip.init(
-              project=PROJECT_ID,
-              location=REGION,
-          )
-          models = [
-              model.display_name for model in aip.Model.list(
-                  project=PROJECT_ID,
-                  location=REGION,
-              )
-          ]
-          # model = aip.Model.upload(
+          forecaster.save(keras_model.path + '.h5')
+          forecaster.save(os.path.join('gcs', 'models_forecasting', f'{feature}.h5'))
+          # aip.init(
           #     project=PROJECT_ID,
           #     location=REGION,
-          #     parent_model=feature if feature in models else None,
-          #     display_name=feature,
-          #     artifact_uri=f'{MODELS_BUCKET_URI}/{feature}',
-          #     serving_container_image_uri=SERVING_IMAGE,
-          #     is_default_version=True,
           # )
-
-          if feature not in models:
-              _ = aip.Model.upload(
-                  project=PROJECT_ID,
-                  location=REGION,
-                  display_name=feature,
-                  artifact_uri=f'{MODELS_BUCKET_URI}/{feature}',
-                  serving_container_image_uri=SERVING_IMAGE,
-                  is_default_version=True,
-              )
-          else:
-              for model in aip.Model.list(
-                      project=PROJECT_ID,
-                      location=REGION,
-              ):
-                  if model.display_name == feature:
-                      _ = aip.Model.upload(
-                          project=PROJECT_ID,
-                          location=REGION,
-                          parent_model=model.name,
-                          display_name=feature,
-                          artifact_uri=f'{MODELS_BUCKET_URI}/{feature}',
-                          serving_container_image_uri=SERVING_IMAGE,
-                          is_default_version=True,
-                      )
-                      break
+          # models = [
+          #     model.display_name for model in aip.Model.list(
+          #         project=PROJECT_ID,
+          #         location=REGION,
+          #     )
+          # ]
+          # if feature not in models:
+          #     _ = aip.Model.upload(
+          #         project=PROJECT_ID,
+          #         location=REGION,
+          #         display_name=feature,
+          #         artifact_uri=f'{MODELS_BUCKET_URI}/{feature}',
+          #         serving_container_image_uri=SERVING_IMAGE,
+          #         is_default_version=True,
+          #     )
+          # else:
+          #     for model in aip.Model.list(
+          #             project=PROJECT_ID,
+          #             location=REGION,
+          #     ):
+          #         if model.display_name == feature:
+          #             _ = aip.Model.upload(
+          #                 project=PROJECT_ID,
+          #                 location=REGION,
+          #                 parent_model=model.name,
+          #                 display_name=feature,
+          #                 artifact_uri=f'{MODELS_BUCKET_URI}/{feature}',
+          #                 serving_container_image_uri=SERVING_IMAGE,
+          #                 is_default_version=True,
+          #             )
+          #             break
 
     args:
     - --executor_input
