--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,9 @@ steps:
   - name: "gcr.io/cloud-builders/docker"
     id: "push container image to container registry"
     args: ["push", "gcr.io/test-rig-349313/forecasting-training"]
+  - name: "gcr.io/cloud-builders/docker"
+    id: "run container"
+    args: ["run", "gcr.io/test-rig-349313/forecasting-training"]
 options:
   machineType: 'E2_HIGHCPU_8'
 images:
