--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,7 @@ steps:
     args: ["run", "gcr.io/test-rig-349313/forecasting-training"]
 options:
   machineType: 'E2_HIGHCPU_8'
+  logging: CLOUD_LOGGING_ONLY
 images:
   - gcr.io/test-rig-349313/forecasting-training
 timeout: 3600s
