--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,17 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
     id: "build container image"
-    args: ["build", "-f","training.dockerfile","-t", "gcr.io/test-rig-349313/forecasting-training", "."]
+    args:
+      [
+        "build",
+        "-f",
+        "training.dockerfile",
+        "-t",
+        "gcr.io/test-rig-349313/forecasting-training",
+        "--network",
+        "cloudbuild",
+        ".",
+      ]
   - name: "gcr.io/cloud-builders/docker"
     id: "push container image to container registry"
     args: ["push", "gcr.io/test-rig-349313/forecasting-training"]
@@ -9,7 +19,7 @@ steps:
     id: "run container"
     args: ["run", "gcr.io/test-rig-349313/forecasting-training"]
 options:
-  machineType: 'E2_HIGHCPU_8'
+  machineType: "E2_HIGHCPU_8"
   logging: CLOUD_LOGGING_ONLY
 images:
   - gcr.io/test-rig-349313/forecasting-training
