--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,18 +16,8 @@ steps:
     args: ["push", "gcr.io/$PROJECT_ID/forecasting-training"]
     id: "push container image to container registry"
   - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "run",
-        "gcr.io/$PROJECT_ID/forecasting-training",
-        "-e",
-        "GOOGLE_APPLICATION_CREDENTIALS=/tmp/keys/key.json",
-        "-v",
-        "$GOOGLE_APPLICATION_CREDENTIALS:/tmp/keys/key.json:ro",
-      ]
+    args: ["run", "gcr.io/$PROJECT_ID/forecasting-training"]
     id: "run container"
-substitutions:
-  _HOME: $HOME
 timeout: 3600s
 images:
   - gcr.io/$PROJECT_ID/forecasting-training
