network set to cloudbuild as per docs, copying the key removed

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,26 +7,15 @@ steps:
         "training.dockerfile",
         "-t",
         "gcr.io/$PROJECT_ID/forecasting-training",
-        "--network",
-        "cloudbuild",
+        "--network=cloudbuild",
         ".",
       ]
     id: "build container image"
   - name: "gcr.io/cloud-builders/docker"
     args: ["push", "gcr.io/$PROJECT_ID/forecasting-training"]
     id: "push container image to container registry"
-  - name: "gcr.io/cloud-builders/gsutil"
-    args: ["cp", "gs://gcloud_keys/key.json", "/workspace/gcloud_keys/key.json"]
   - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "run",
-        "-e",
-        "GOOGLE_APPLICATION_CREDENTIALS=/gcloud_keys/key.json",
-        "-v",
-        "/workspace/gcloud_keys:/gcloud_keys:ro",
-        "gcr.io/$PROJECT_ID/forecasting-training",
-      ]
+    args: ["run", "gcr.io/$PROJECT_ID/forecasting-training"]
     id: "run container"
 timeout: 3600s
 images:
