--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,6 +27,16 @@ steps:
         "gcr.io/$PROJECT_ID/forecasting-training:$SHORT_SHA",
       ]
     id: "run container"
+  - name: "gcr.io/cloud-builders/gsutil"
+    args:
+      [
+        "rsync",
+        "-m",
+        "-r",
+        "-d",
+        "/workspace/compiled/",
+        "gs://test_rig_pipelines/compiled_pipelines/",
+      ]
 images:
   - gcr.io/$PROJECT_ID/forecasting-training
 options:
